package server

import (
	"context"
	tp "ticket_sys/services/inventory/proto/ticket"
)

type TicketServiceHandler struct{}

// GetAvailableTickets 查询剩余票数
func (h *TicketServiceHandler) GetAvailableTickets(ctx context.Context, req *tp.GetAvailableTicketsRequest, rsp *tp.GetAvailableTicketsResponse) error {
	// 示例逻辑
	rsp.AvailableTickets = 100 // 假定剩余票数
	return nil
}

// BookTicket 预订票
func (h *TicketServiceHandler) BookTicket(ctx context.Context, req *tp.BookTicketRequest, rsp *tp.BookTicketResponse) error {
	// 示例逻辑
	rsp.Success = true
	rsp.BookingId = "12345"
	rsp.Message = "Booking successful"
	return nil
}

// CancelBooking 取消预订
func (h *TicketServiceHandler) CancelBooking(ctx context.Context, req *tp.CancelBookingRequest, rsp *tp.CancelBookingResponse) error {
	// 示例逻辑
	rsp.Success = true
	rsp.Message = "Cancellation successful"
	return nil
}
